# llm_subproj

./: .gitignore  main.py  pyproject.toml  test.py
Agent/: agent_test.py  extract_agent.py  readme.md  template.py
Dash_Agent/: .gitignore  README.md  acs-data-explorer-architecture.excalidraw  app.py  db_tools.py  extract_agent.py  model_registry.py  plan.md  query_db.py
Dash_Agent/.claude/: settings.local.json
Dash_Agent/archived/: agent_new_api.py
Dash_Agent/static/: app.js  index.html  style.css
Dash_Agent/web/backend/: main.py
Doc_Review_Agent/: Dockerfile  README.md  compliance_agent.py  config.py  docker-compose.yml  extraction_agent.py  ingestion.py  innovation_agent.py  main.py  market_agent.py  orchestrator.py  rag.py  requirements.txt  test_smoke.py  utils.py  websearch_agent.py
HarnessAgent/: agent.py  agent_arch.py  core_map.py  plan.md  s01-the-agent-loop.py
HarnessAgent/temp/: README.md  Settings.py  agent.py  db_models.py  db_utils.py  plan.md  query_db.py
Model_Strcture/: Text_Matching.py
Number_Norm/: method.txt  model.py
PRISM_Model/: README.md  config.py  datause.md  loader.py  main.py  model.py  predict.py  preprocess.py  resume_entry.md  structure.md
Sentence_Match_FQA/: README.md  config.py  evaluate.py  feature.md  fqa_architecture.excalidraw  loader.py  main.py  model.py  note.md  run_model.py  test.py
Twitter_CLS_nn_pipline/: FEATURES.md  README.md  config.py  evalute.py  loader.py  loader_archived.py  lora_optimize.py  main.py  main_archived.py  model.py  plan.txt  predict.py  preprocess.py  relabel.py  run_experiment.py
(+45 files in other folders)
